--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,11 @@
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <title>React App</title>
+    <link href="http://fonts.cdnfonts.com/css/hk-groteks" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;700&display=swap" rel="stylesheet">
+    <title>Welcome to Salt</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
